commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.shape.yml
+++ b/docs/docs-ref-autogen/excel/excel.shape.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 67621ae13426a756364e0cd8e317a2635a1bc17e
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
+ms.openlocfilehash: 13edb8dc8f1871ff1c5c9e93b5687ef08c78192a
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575681"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900382"
 items:
 - uid: excel.Excel.Shape
   summary: >-
@@ -70,7 +70,7 @@ items:
   - excel.Excel.Shape.zorderPosition
 - uid: excel.Excel.Shape.altTextDescription
   summary: >-
-    返回或设置 Shape 对象的替代说明文本。
+    返回或设置形状对象的可选说明文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -87,7 +87,7 @@ items:
       - string
 - uid: excel.Excel.Shape.altTextTitle
   summary: >-
-    返回或设置 Shape 对象的可选标题文本。
+    返回或设置形状对象的可选标题文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -104,7 +104,7 @@ items:
       - string
 - uid: excel.Excel.Shape.connectionSiteCount
   summary: >-
-    返回此形状上的连接网站数。 只读。
+    返回此形状上的连接站点数。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -134,7 +134,7 @@ items:
       - RequestContext
 - uid: excel.Excel.Shape.delete
   summary: >-
-    从工作表中删除该形状。
+    从工作表删除形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -170,7 +170,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.addGeometricShape(Excel.GeometricShapeType.smileyFace);\n    shape.left = 300;\n    shape.top = 100;\n    shape.height = 100;\n    shape.width = 100;\n    shape.fill.foregroundColor = \"yellow\"\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Shape.geometricShape
   summary: >-
-    返回与形状相关联的几何形状。 如果形状类型不是 "GeometricShape", 则会引发错误。
+    返回与形状关联的几何形状。 如果形状类型不是“GeometricShape”，则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -187,7 +187,7 @@ items:
       - excel.Excel.GeometricShape
 - uid: excel.Excel.Shape.geometricShapeType
   summary: >-
-    表示此几何形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状类型不是 "GeometricShape", 则返回 null。
+    表示此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -204,7 +204,7 @@ items:
       - Excel.GeometricShapeType | "LineInverse" | "Triangle" | "RightTriangle" | "Rectangle" | "Diamond" | "Parallelogram" | "Trapezoid" | "NonIsoscelesTrapezoid" | "Pentagon" | "Hexagon" | "Heptagon" | "Octagon" | "Decagon" | "Dodecagon" | "Star4" | "Star5" | "Star6" | "Star7" | "Star8" | "Star10" | "Star12" | "Star16" | "Star24" | "Star32" | "RoundRectangle" | "Round1Rectangle" | "Round2SameRectangle" | "Round2DiagonalRectangle" | "SnipRoundRectangle" | "Snip1Rectangle" | "Snip2SameRectangle" | "Snip2DiagonalRectangle" | "Plaque" | "Ellipse" | "Teardrop" | "HomePlate" | "Chevron" | "PieWedge" | "Pie" | "BlockArc" | "Donut" | "NoSmoking" | "RightArrow" | "LeftArrow" | "UpArrow" | "DownArrow" | "StripedRightArrow" | "NotchedRightArrow" | "BentUpArrow" | "LeftRightArrow" | "UpDownArrow" | "LeftUpArrow" | "LeftRightUpArrow" | "QuadArrow" | "LeftArrowCallout" | "RightArrowCallout" | "UpArrowCallout" | "DownArrowCallout" | "LeftRightArrowCallout" | "UpDownArrowCallout" | "QuadArrowCallout" | "BentArrow" | "UturnArrow" | "CircularArrow" | "LeftCircularArrow" | "LeftRightCircularArrow" | "CurvedRightArrow" | "CurvedLeftArrow" | "CurvedUpArrow" | "CurvedDownArrow" | "SwooshArrow" | "Cube" | "Can" | "LightningBolt" | "Heart" | "Sun" | "Moon" | "SmileyFace" | "IrregularSeal1" | "IrregularSeal2" | "FoldedCorner" | "Bevel" | "Frame" | "HalfFrame" | "Corner" | "DiagonalStripe" | "Chord" | "Arc" | "LeftBracket" | "RightBracket" | "LeftBrace" | "RightBrace" | "BracketPair" | "BracePair" | "Callout1" | "Callout2" | "Callout3" | "AccentCallout1" | "AccentCallout2" | "AccentCallout3" | "BorderCallout1" | "BorderCallout2" | "BorderCallout3" | "AccentBorderCallout1" | "AccentBorderCallout2" | "AccentBorderCallout3" | "WedgeRectCallout" | "WedgeRRectCallout" | "WedgeEllipseCallout" | "CloudCallout" | "Cloud" | "Ribbon" | "Ribbon2" | "EllipseRibbon" | "EllipseRibbon2" | "LeftRightRibbon" | "VerticalScroll" | "HorizontalScroll" | "Wave" | "DoubleWave" | "Plus" | "FlowChartProcess" | "FlowChartDecision" | "FlowChartInputOutput" | "FlowChartPredefinedProcess" | "FlowChartInternalStorage" | "FlowChartDocument" | "FlowChartMultidocument" | "FlowChartTerminator" | "FlowChartPreparation" | "FlowChartManualInput" | "FlowChartManualOperation" | "FlowChartConnector" | "FlowChartPunchedCard" | "FlowChartPunchedTape" | "FlowChartSummingJunction" | "FlowChartOr" | "FlowChartCollate" | "FlowChartSort" | "FlowChartExtract" | "FlowChartMerge" | "FlowChartOfflineStorage" | "FlowChartOnlineStorage" | "FlowChartMagneticTape" | "FlowChartMagneticDisk" | "FlowChartMagneticDrum" | "FlowChartDisplay" | "FlowChartDelay" | "FlowChartAlternateProcess" | "FlowChartOffpageConnector" | "ActionButtonBlank" | "ActionButtonHome" | "ActionButtonHelp" | "ActionButtonInformation" | "ActionButtonForwardNext" | "ActionButtonBackPrevious" | "ActionButtonEnd" | "ActionButtonBeginning" | "ActionButtonReturn" | "ActionButtonDocument" | "ActionButtonSound" | "ActionButtonMovie" | "Gear6" | "Gear9" | "Funnel" | "MathPlus" | "MathMinus" | "MathMultiply" | "MathDivide" | "MathEqual" | "MathNotEqual" | "CornerTabs" | "SquareTabs" | "PlaqueTabs" | "ChartX" | "ChartStar" | "ChartPlus"
 - uid: excel.Excel.Shape.getAsImage
   summary: >-
-    将形状转换为图像, 并以 base64 编码的字符串的形式返回图像。 DPI 为96。 唯一受支持的格式是`Excel.PictureFormat.BMP`<!-- -->, `Excel.PictureFormat.PNG`<!-- -->, `Excel.PictureFormat.JPEG`<!-- -->, 并`Excel.PictureFormat.GIF`<!-- -->.
+    将形状转换为图像并将图像返回为 base64 编码字符串。 DPI 为 96。 唯一受支持的格式是`Excel.PictureFormat.BMP`<!-- -->, `Excel.PictureFormat.PNG`<!-- -->, `Excel.PictureFormat.JPEG`<!-- -->, 并`Excel.PictureFormat.GIF`<!-- -->.
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -219,7 +219,7 @@ items:
     return:
       type:
       - OfficeExtension.ClientResult<string>
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.getItem(\"Image\");\n    const result = shape.getAsImage(Excel.PictureFormat.png);\n    await context.sync();\n\n    const imageString = result.value;\n    // Your add-in would save this string as a .png file.\n    console.log(\"The image's base64-encoded string: \" + imageString);\n});\n```"
     parameters:
     - id: format
       description: 指定图像的格式。
@@ -227,7 +227,7 @@ items:
       - excel.Excel.PictureFormat
 - uid: excel.Excel.Shape.getAsImage_1
   summary: >-
-    将形状转换为图像, 并以 base64 编码的字符串的形式返回图像。 DPI 为96。 唯一受支持的格式是`Excel.PictureFormat.BMP`<!-- -->, `Excel.PictureFormat.PNG`<!-- -->, `Excel.PictureFormat.JPEG`<!-- -->, 并`Excel.PictureFormat.GIF`<!-- -->.
+    将形状转换为图像并将图像返回为 base64 编码字符串。 DPI 为 96。 唯一受支持的格式是`Excel.PictureFormat.BMP`<!-- -->, `Excel.PictureFormat.PNG`<!-- -->, `Excel.PictureFormat.JPEG`<!-- -->, 并`Excel.PictureFormat.GIF`<!-- -->.
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -250,7 +250,7 @@ items:
       - "\"UNKNOWN\" | \"BMP\" | \"JPEG\" | \"GIF\" | \"PNG\" | \"SVG\""
 - uid: excel.Excel.Shape.group
   summary: >-
-    返回与形状关联的形状组。 如果形状类型不是 "GroupShape", 则会引发错误。
+    返回与形状关联的形状组。 如果形状类型不是“GroupShape”，则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -302,7 +302,7 @@ items:
       - string
 - uid: excel.Excel.Shape.image
   summary: >-
-    返回与形状相关联的图像。 如果形状类型不是 "Image", 则会引发错误。
+    返回与形状关联的图像。 如果形状类型不是“Image”，则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -342,7 +342,7 @@ items:
       - number
 - uid: excel.Excel.Shape.incrementRotation
   summary: >-
-    将形状围绕 z 轴顺时针旋转指定的角度。 使用`rotation`属性可设置形状的绝对旋转量。
+    将形状围绕 z 轴旋转特定度数。 使用`rotation`属性可设置形状的绝对旋转量。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -388,7 +388,7 @@ items:
       - number
 - uid: excel.Excel.Shape.left
   summary: >-
-    从形状左侧到工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
+    从形状左侧到工作表左侧的距离（以磅为单位）。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -405,7 +405,7 @@ items:
       - number
 - uid: excel.Excel.Shape.level
   summary: >-
-    表示指定形状的级别。 例如, 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 而级别为2表示该形状是顶层的子组的一部分。
+    表示指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -422,7 +422,7 @@ items:
       - number
 - uid: excel.Excel.Shape.line
   summary: >-
-    返回与形状相关联的线条。 如果形状类型不是 "Line", 则会引发错误。
+    返回与形状关联的线条。 如果形状类型不是“Line”，则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -525,7 +525,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.Shape.lockAspectRatio
   summary: >-
-    指定是否锁定此形状的纵横比。
+    指定此形状的纵横比是否锁定。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -540,6 +540,7 @@ items:
     return:
       type:
       - boolean
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.getItem(\"Octagon\")\n    shape.lockAspectRatio = true;\n    shape.scaleHeight(1.25, Excel.ShapeScaleType.currentSize);\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Shape.name
   summary: >-
     表示形状的名称。
@@ -576,7 +577,7 @@ items:
       - OfficeExtension.EventHandlers<Excel.ShapeActivatedEventArgs>
 - uid: excel.Excel.Shape.onDeactivated
   summary: >-
-    停用形状时发生。
+    当停用形状时发生此事件。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -610,7 +611,7 @@ items:
       - excel.Excel.Shape
 - uid: excel.Excel.Shape.placement
   summary: >-
-    表示对象附加到其下的单元格的方式。
+    表示对象如何附加到其下方的单元格。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -645,7 +646,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.addGeometricShape(Excel.GeometricShapeType.triangle);\n    shape.left = 100;\n    shape.top = 300;\n    shape.height = 150;\n    shape.width = 200;\n    shape.rotation = 45;\n    shape.fill.clear();\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Shape.scaleHeight
   summary: >-
-    按指定因子缩放形状的高度。 对于图像, 可以指示是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前高度而言。
+    按指定因子缩放形状的高度。 对于图像，你可以说明是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前高度而言。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -660,7 +661,7 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.getItem(\"Octagon\")\n    shape.scaleHeight(1.25, Excel.ShapeScaleType.currentSize);\n    shape.scaleWidth(1.25, Excel.ShapeScaleType.currentSize);\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.getItem(\"Octagon\")\n    shape.lockAspectRatio = true;\n    shape.scaleHeight(1.25, Excel.ShapeScaleType.currentSize);\n    await context.sync();\n});\n```"
     parameters:
     - id: scaleFactor
       description: 指定形状调整后的高度与当前或原始高度的比例。
@@ -676,7 +677,7 @@ items:
       - excel.Excel.ShapeScaleFrom
 - uid: excel.Excel.Shape.scaleHeight_1
   summary: >-
-    按指定因子缩放形状的高度。 对于图像, 可以指示是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前高度而言。
+    按指定因子缩放形状的高度。 对于图像，你可以说明是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前高度而言。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -707,7 +708,7 @@ items:
       - "\"ScaleFromTopLeft\" | \"ScaleFromMiddle\" | \"ScaleFromBottomRight\""
 - uid: excel.Excel.Shape.scaleWidth
   summary: >-
-    按指定因子缩放形状的宽度。 对于图像, 可以指示是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前宽度而言。
+    按指定因子缩放形状的宽度。 对于图像，你可以说明是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前宽度而言。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -722,7 +723,7 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.getItem(\"Octagon\")\n    shape.scaleHeight(1.25, Excel.ShapeScaleType.currentSize);\n    shape.scaleWidth(1.25, Excel.ShapeScaleType.currentSize);\n    await context.sync();\n});\n```"
+      description: ''
     parameters:
     - id: scaleFactor
       description: 指定形状调整后的宽度与当前或原始宽度的比例。
@@ -738,7 +739,7 @@ items:
       - excel.Excel.ShapeScaleFrom
 - uid: excel.Excel.Shape.scaleWidth_1
   summary: >-
-    按指定因子缩放形状的宽度。 对于图像, 可以指示是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前宽度而言。
+    按指定因子缩放形状的宽度。 对于图像，你可以说明是相对于原始尺寸还是当前尺寸缩放形状。 对于除图片以外的其他形状来说，缩放总是相对于其当前宽度而言。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -816,7 +817,7 @@ items:
       - excel.Excel.Shape
 - uid: excel.Excel.Shape.setZOrder
   summary: >-
-    将指定的形状在集合的 z-顺序中上移或下移, 这会将其移到其他形状的前面或后面。
+    将指定形状沿集合的 z 顺序向上或向下移动，将其移动到其他形状的前面或后面。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -839,7 +840,7 @@ items:
       - excel.Excel.ShapeZOrder
 - uid: excel.Excel.Shape.setZOrder_1
   summary: >-
-    将指定的形状在集合的 z-顺序中上移或下移, 这会将其移到其他形状的前面或后面。
+    将指定形状沿集合的 z 顺序向上或向下移动，将其移动到其他形状的前面或后面。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -862,7 +863,7 @@ items:
       - "\"BringToFront\" | \"BringForward\" | \"SendToBack\" | \"SendBackward\""
 - uid: excel.Excel.Shape.textFrame
   summary: >-
-    返回此形状的文本框架对象。 只读。
+    返回此形状的文本框对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -893,7 +894,7 @@ items:
       description: ''
 - uid: excel.Excel.Shape.top
   summary: >-
-    从形状的上边缘到工作表的上边缘之间的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
+    从形状上边缘到工作表上边缘之间的距离（以磅为单位）。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -910,7 +911,7 @@ items:
       - number
 - uid: excel.Excel.Shape.type
   summary: >-
-    返回此形状的类型。 有关详细信息, 请参阅 ShapeType。 只读。
+    返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -927,7 +928,7 @@ items:
       - Excel.ShapeType | "Unsupported" | "Image" | "GeometricShape" | "Group" | "Line"
 - uid: excel.Excel.Shape.visible
   summary: >-
-    表示此形状的可见性。
+    表示此形状的可视性。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -961,7 +962,7 @@ items:
       - number
 - uid: excel.Excel.Shape.zorderPosition
   summary: >-
-    返回指定的形状在 z-顺序中的位置, 0 表示顺序栈的底部。 只读。
+    返回指定形状在 z 顺序中的位置，0 表示顺序堆栈的底部。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
