--- a/docs/docs-ref-autogen/word/word.font.yml
+++ b/docs/docs-ref-autogen/word/word.font.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 05df45105511d3a919adbd23bd14a6a1c0b5fb3b
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 8dfa99fd9cba39b77359c4b05e936e8ee74f5c99
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29973252"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900361"
 items:
 - uid: word.Word.Font
   summary: >-
     表示字体。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: Word.Font
   fullName: Word.Font
   langs:
@@ -43,10 +43,10 @@ items:
   - word.Word.Font.untrack
 - uid: word.Word.Font.bold
   summary: >-
-    获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。
+    获取或设置表示字体是否为粗体的值。 如果字体格式为粗体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: bold
   fullName: bold
   langs:
@@ -59,10 +59,10 @@ items:
       - boolean
 - uid: word.Word.Font.color
   summary: >-
-    获取或设置指定字体的颜色。 您可以提供中的值\#RRGGBB 格式或颜色名称。
+    获取或设置指定字体的颜色。 您可以提供 "\#RRGGBB" 格式的值或颜色名称。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: color
   fullName: color
   langs:
@@ -74,7 +74,7 @@ items:
       type:
       - string
 - uid: word.Word.Font.context
-  summary: 与对象关联的请求上下文。 这将连接到 Office 主机应用程序的过程外接程序的过程。
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
   name: context
   fullName: context
   langs:
@@ -87,10 +87,10 @@ items:
       - RequestContext
 - uid: word.Word.Font.doubleStrikeThrough
   summary: >-
-    获取或设置一个值，该值指示字体是否具有双删除线。 如果字体为双删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有双删除线。 如果字体格式设置为加双删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -103,10 +103,13 @@ items:
       - boolean
 - uid: word.Word.Font.highlightColor
   summary: >-
-    获取或设置的突出显示颜色。 若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。 若要删除突出显示颜色，请将其设置为 null。 返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。
+    获取或设置突出显示颜色。 若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。 若要删除突出显示颜色, 请将其设置为 null。 返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    **注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。 这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。 当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。
+
+
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -119,10 +122,10 @@ items:
       - string
 - uid: word.Word.Font.italic
   summary: >-
-    获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。
+    获取或设置表示字体是否为斜体的值。 如果字体为斜体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: italic
   fullName: italic
   langs:
@@ -134,18 +137,18 @@ items:
       type:
       - boolean
 - uid: word.Word.Font.load
-  summary: 队列设置命令加载指定的对象的属性。 读取属性之前，必须调用"context.sync()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
-    除了此签名，此方法具有以下签名：
+    除了此签名之外, 此方法还具有以下签名:
 
 
-    `load(option?: string | string[]): Word.Font`-其中选项是一个以逗号分隔的字符串或一个指定要加载的属性的字符串数组。
+    `load(option?: string | string[]): Word.Font`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
 
 
-    `load(option?: { select?: string; expand?: string; }): Word.Font`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。
+    `load(option?: { select?: string; expand?: string; }): Word.Font`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
 
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Font`-仅可对集合的类型。 它是类似于前一个签名。 Option.top 指定集合项可在结果中包含的最大数目。 Option.skip 指定要跳过和结果中不包含的项的数目。 如果指定 option.top，则将跳过指定的数目的项后启动结果集。
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Font`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
 
     #### <a name="examples"></a>示例
 
@@ -376,7 +379,7 @@ items:
       type:
       - word.Word.Interfaces.FontLoadOptions
 - uid: word.Word.Font.load_1
-  summary: 队列设置命令加载指定的对象的属性。 您必须调用`context.sync()`阅读属性之前。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNames)
   fullName: load(propertyNames)
   langs:
@@ -390,11 +393,11 @@ items:
       description: ''
     parameters:
     - id: propertyNames
-      description: 以逗号分隔字符串或一个指定要加载的属性的字符串数组。
+      description: 一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。
       type:
       - string | string[]
 - uid: word.Word.Font.load_2
-  summary: 队列设置命令加载指定的对象的属性。 您必须调用`context.sync()`阅读属性之前。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
   langs:
@@ -408,7 +411,7 @@ items:
       description: ''
     parameters:
     - id: propertyNamesAndPaths
-      description: 其中 propertyNamesAndPaths.select 是一个以逗号分隔的字符串，指定要加载的属性，propertyNamesAndPaths.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。
+      description: 其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
       type:
       - '{ select?: string; expand?: string; }'
 - uid: word.Word.Font.name
@@ -416,7 +419,7 @@ items:
     获取或设置表示字体名称的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: name
   fullName: name
   langs:
@@ -428,9 +431,9 @@ items:
       type:
       - string
 - uid: word.Word.Font.set
-  summary: 在同一时间设置对象的多个的属性。 您可以传递具有的相应属性的普通对象或相同类型的另一个 API 对象。
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
   remarks: >-
-    此方法具有以下其他签名：
+    此方法具有以下附加签名:
 
 
     `set(properties: Word.Font): void`
@@ -447,15 +450,15 @@ items:
       description: ''
     parameters:
     - id: properties
-      description: 具有对属性的对象调用 isomorphically 结构化的属性的 JavaScript 对象。
+      description: 一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。
       type:
       - Interfaces.FontUpdateData
     - id: options
-      description: 提供一个选项以取消显示错误，如果属性对象会尝试设置任何只读属性。
+      description: 提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。
       type:
       - office.OfficeExtension.UpdateOptions
 - uid: word.Word.Font.set_1
-  summary: 在基于现有加载对象的同一时间对象上设置多个属性。
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
   name: set(properties)
   fullName: set(properties)
   langs:
@@ -477,7 +480,7 @@ items:
     获取或设置表示字体大小（以磅值表示）的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: size
   fullName: size
   langs:
@@ -490,10 +493,10 @@ items:
       - number
 - uid: word.Word.Font.strikeThrough
   summary: >-
-    获取或设置一个值，指示该字体是否删除线。 如果字体为删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有删除线。 如果字体格式设置为加删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -506,10 +509,10 @@ items:
       - boolean
 - uid: word.Word.Font.subscript
   summary: >-
-    获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。
+    获取或设置表示字体是否为下标的值。 如果字体格式为下标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: subscript
   fullName: subscript
   langs:
@@ -522,10 +525,10 @@ items:
       - boolean
 - uid: word.Word.Font.superscript
   summary: >-
-    获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。
+    获取或设置表示字体是否为上标的值。 如果字体格式为上标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: superscript
   fullName: superscript
   langs:
@@ -549,7 +552,7 @@ items:
       - word.Word.Interfaces.FontData
       description: ''
 - uid: word.Word.Font.track
-  summary: 跟踪自动调整根据周围的文档中的更改的对象。 此呼叫是 context.trackedObjects.add(thisObject) 简写。 如果您正在使用此对象跨".sync"呼叫和外部".run"批处理和 get"InvalidObjectPath"错误的顺序执行设置属性时，或调用对象的方法，您需要具有将对象添加到跟踪对象首先创建对象集合。
+  summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
   name: track()
   fullName: track()
   langs:
@@ -563,10 +566,10 @@ items:
       description: ''
 - uid: word.Word.Font.underline
   summary: >-
-    获取或设置一个值，指示字体的下划线类型。 None 如果的字体不加下划线。
+    获取或设置表示字体的下划线类型的值。 如果字体不带下划线, 则为 "无"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: underline
   fullName: underline
   langs:
@@ -578,7 +581,7 @@ items:
       type:
       - Word.UnderlineType | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"
 - uid: word.Word.Font.untrack
-  summary: 发行版与此对象，如果以前跟踪关联的内存。 此呼叫是简写 context.trackedObjects.remove(thisObject)。 具有许多跟踪的对象速度减慢主机应用程序，因此请记住以释放添加在完成后的任何对象使用它们。 您将需要的内存版本生效前调用"context.sync()"。
+  summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
   name: untrack()
   fullName: untrack()
   langs:
