--- a/docs/docs-ref-autogen/word/word.interfaces.fontloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.fontloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5f68922643728e84f3775a81953024b00fcecd67
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: bf4a9a1d865c741b122e810e14b9baa66b0b39be
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29982726"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900368"
 items:
 - uid: word.Word.Interfaces.FontLoadOptions
   summary: >-
     表示字体。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: Word.Interfaces.FontLoadOptions
   fullName: Word.Interfaces.FontLoadOptions
   langs:
@@ -44,10 +44,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.bold
   summary: >-
-    获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。
+    获取或设置表示字体是否为粗体的值。 如果字体格式为粗体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: bold
   fullName: bold
   langs:
@@ -60,10 +60,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.color
   summary: >-
-    获取或设置指定字体的颜色。 您可以提供中的值\#RRGGBB 格式或颜色名称。
+    获取或设置指定字体的颜色。 您可以提供 "\#RRGGBB" 格式的值或颜色名称。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: color
   fullName: color
   langs:
@@ -76,10 +76,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.doubleStrikeThrough
   summary: >-
-    获取或设置一个值，该值指示字体是否具有双删除线。 如果字体为双删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有双删除线。 如果字体格式设置为加双删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -92,10 +92,13 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.highlightColor
   summary: >-
-    获取或设置的突出显示颜色。 若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。 若要删除突出显示颜色，请将其设置为 null。 返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。
+    获取或设置突出显示颜色。 若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。 若要删除突出显示颜色, 请将其设置为 null。 返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    **注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。 这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。 当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。
+
+
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -108,10 +111,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.italic
   summary: >-
-    获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。
+    获取或设置表示字体是否为斜体的值。 如果字体为斜体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: italic
   fullName: italic
   langs:
@@ -127,7 +130,7 @@ items:
     获取或设置表示字体名称的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: name
   fullName: name
   langs:
@@ -143,7 +146,7 @@ items:
     获取或设置表示字体大小（以磅值表示）的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: size
   fullName: size
   langs:
@@ -156,10 +159,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.strikeThrough
   summary: >-
-    获取或设置一个值，指示该字体是否删除线。 如果字体为删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有删除线。 如果字体格式设置为加删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -172,10 +175,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.subscript
   summary: >-
-    获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。
+    获取或设置表示字体是否为下标的值。 如果字体格式为下标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: subscript
   fullName: subscript
   langs:
@@ -188,10 +191,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.superscript
   summary: >-
-    获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。
+    获取或设置表示字体是否为上标的值。 如果字体格式为上标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: superscript
   fullName: superscript
   langs:
@@ -204,10 +207,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.underline
   summary: >-
-    获取或设置一个值，指示字体的下划线类型。 None 如果的字体不加下划线。
+    获取或设置表示字体的下划线类型的值。 如果字体不带下划线, 则为 "无"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: underline
   fullName: underline
   langs:
