--- a/docs/docs-ref-autogen/office.yml
+++ b/docs/docs-ref-autogen/office.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 166355af8df97c6673b2ac19a6e25bf242dac126
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 672d94d6b1b14e2143cc82f5d3e149f572475e85
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29982543"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900396"
 items:
 - uid: office
   name: office
@@ -22,6 +22,8 @@ items:
   - office.Office.AsyncContextOptions
   - office.Office.AsyncResult
   - office.Office.AsyncResultStatus
+  - office.Office.Auth
+  - office.Office.AuthOptions
   - office.Office.Binding
   - office.Office.BindingDataChangedEventArgs
   - office.Office.Bindings
@@ -108,17 +110,17 @@ items:
     加载运行时环境和外接程序准备好开始与应用和托管文档交互时发生。
 
 
-    Reason 参数的 initialize 事件侦听器函数返回`InitializationReason`指定如何初始化发生的枚举值。 可以通过以下两种初始化的任务窗格或内容加载项：
+    initialize 事件侦听器函数的 reason 参数返回一个`InitializationReason`枚举值, 该值指定初始化的发生方式。 任务窗格外接程序或内容外接程序可以通过下列两种方式进行初始化：
 
 
-    - 用户刚刚插入它从的 Office 主机应用程序，在功能区的插入选项卡上的外接程序下拉列表的最近使用过的加载项部分或插入外接程序对话框。
+    - 用户刚刚将其从 Office 主机应用程序功能区的 "插入" 选项卡上的 "外接程序" 下拉列表的 "最近使用的外接程序" 部分插入, 或从 "插入外接程序" 对话框中插入。
 
 
     - 用户打开已包含外接程序的文档。
 
 
-    *注意*： reason 参数的 initialize 事件侦听器函数仅返回`InitializationReason`任务窗格和内容加载项的枚举值。它不返回 Outlook 加载项的值。
-  remarks: "**支持详细信息**\n\n下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。\n\n有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。\n\n*支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// You can use the value of the InitializationEnumeration to implement different logic for\n// when the add-in is first inserted versus when it is already part of the document.\n// The following example shows some simple logic that uses the value of the reason parameter\n// to display how the task pane or content add-in was initialized.\nOffice.initialize = function (reason) {\n    // Checks for the DOM to load using the jQuery ready function.\n    $(document).ready(function () {\n    // After the DOM is loaded, code specific to the add-in can run.\n    // Display initialization reason.\n    if (reason == \"inserted\")\n    write(\"The add-in was just inserted.\");\n\n    if (reason == \"documentOpened\")\n    write(\"The add-in is already part of the document.\");\n    });\n}\n\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
+    *注意*: initialize 事件侦听器函数的 reason 参数仅返回任务窗格和`InitializationReason`内容外接程序的枚举值。它不会返回 Outlook 外接程序的值。
+  remarks: "**支持详细信息**\n\n下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。\n\n有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.\n\n*支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// You can use the value of the InitializationEnumeration to implement different logic for\n// when the add-in is first inserted versus when it is already part of the document.\n// The following example shows some simple logic that uses the value of the reason parameter\n// to display how the task pane or content add-in was initialized.\nOffice.initialize = function (reason) {\n    // Checks for the DOM to load using the jQuery ready function.\n    $(document).ready(function () {\n    // After the DOM is loaded, code specific to the add-in can run.\n    // Display initialization reason.\n    if (reason == \"inserted\")\n    write(\"The add-in was just inserted.\");\n\n    if (reason == \"documentOpened\")\n    write(\"The add-in is already part of the document.\");\n    });\n}\n\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
   name: Office.initialize
   fullName: Office.initialize
   langs:
@@ -136,7 +138,7 @@ items:
       type:
       - office.Office.InitializationReason
 - uid: office.Office.onReady
-  summary: 确保 Office JavaScript Api 便可由加载项调用。 如果尚未尚未初始化框架，回调或承诺将等待的 Office 主机并且准备接受 API 调用。 请注意，尽管此 API 旨在用于内部 Office 加载项，它也可以使用外部外接程序。 在这种情况下，一旦 Office.js 确定它运行 Office 主机应用程序之外，它将调用回调并解决与"null"的主机和平台的承诺。
+  summary: 确保 Office JavaScript api 已准备就绪, 可供外接程序调用。 如果该框架尚未初始化, 则回拨或承诺将一直等到 Office 主机准备好接受 API 调用。 请注意, 虽然此 API 适用于 Office 外接程序, 但也可在外接程序外使用。 在这种情况下, 一旦 node.js 确定它在 Office 主机应用程序外部运行, 它将调用回调并为主机和平台解析 "null" 承诺。
   name: Office.onReady
   fullName: Office.onReady
   langs:
@@ -147,14 +149,14 @@ items:
     return:
       type:
       - 'Promise<{ host: HostType, platform: PlatformType }>'
-      description: 包含的主机和平台的信息，完成初始化后承诺。
+      description: 完成初始化后, 包含主机和平台信息的承诺。
     parameters:
     - id: callback
-      description: 指定可选的回调方法，将接收的主机和平台的信息。 此外，而不是使用回拨外, 接程序可能只需等待函数返回承诺，以解决。
+      description: 一个可选的回调方法, 它将接收主机和平台信息。 此外, 外接程序可能只需要等待由函数返回的承诺来解决, 而不是使用回调。
       type:
       - '(info: { host: HostType, platform: PlatformType }) => any'
 - uid: office.Office.select
-  summary: 返回对象的表达式中所述的承诺。 仅当方法将失败，将调用回调。
+  summary: 返回表达式中所述的对象承诺。 仅在方法失败时调用回调。
   remarks: >-
     **支持详细信息**
 
@@ -162,7 +164,7 @@ items:
     下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。
 
 
-    有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。
+    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
 
     *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td></tr> </table>
@@ -199,16 +201,16 @@ items:
       description: ''
     parameters:
     - id: expression
-      description: 要检索的对象。 示例"绑定\#BindingName"，将检索名为 BindingName' 绑定绑定承诺
+      description: 要检索的对象。 示例 "bindings\#BindingName" 检索名为 "BindingName" 的绑定的绑定承诺
       type:
       - string
     - id: callback
-      description: 可选。 在回调返回时调用的其唯一参数的类型[Office.AsyncResult](xref:office.Office.AsyncResult)函数<!-- -->。
+      description: 可选。 回调返回时调用的函数, 其唯一的参数的类型为 " [Office. AsyncResult](xref:office.Office.AsyncResult) "<!-- -->.
       type:
       - '(result: AsyncResult<any>) => void'
 - uid: office.Office.useShortNamespace
-  summary: 切换`Office`别名完整`Microsoft.Office.WebExtension`命名空间。
-  remarks: "**支持详细信息**\n\n下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。\n\n有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。\n\n*支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>\n#### <a name=\"examples\"></a>示例\n\n```javascript\nfunction startUsingShortNamespace() {\n    if (typeof Office === 'undefined') {\n        Microsoft.Office.WebExtension.useShortNamespace(true);\n    }\n    else {\n        Office.useShortNamespace(true);\n    }\n    write('Office alias is now ' + typeof Office);\n}\n\nfunction stopUsingShortNamespace() {\n    if (typeof Office === 'undefined') {\n        Microsoft.Office.WebExtension.useShortNamespace(false);\n    }\n    else {\n        Office.useShortNamespace(false);\n    }\n    write('Office alias is now ' + typeof Office);\n}\n\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
+  summary: 切换完整`Microsoft.Office.WebExtension`命名空间的`Office`别名。
+  remarks: "**支持详细信息**\n\n下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。\n\n有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.\n\n*支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>\n#### <a name=\"examples\"></a>示例\n\n```javascript\nfunction startUsingShortNamespace() {\n    if (typeof Office === 'undefined') {\n        Microsoft.Office.WebExtension.useShortNamespace(true);\n    }\n    else {\n        Office.useShortNamespace(true);\n    }\n    write('Office alias is now ' + typeof Office);\n}\n\nfunction stopUsingShortNamespace() {\n    if (typeof Office === 'undefined') {\n        Microsoft.Office.WebExtension.useShortNamespace(false);\n    }\n    else {\n        Office.useShortNamespace(false);\n    }\n    write('Office alias is now ' + typeof Office);\n}\n\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
   name: Office.useShortNamespace
   fullName: Office.useShortNamespace
   langs:
@@ -222,7 +224,7 @@ items:
       description: ''
     parameters:
     - id: useShortNamespace
-      description: 为 true，则使用快捷方式别名;否则为 false 来禁用它。 默认值为 true。
+      description: 如果为 True, 则使用快捷方式别名;否则设置为 false 以禁用它。 默认值为 true。
       type:
       - boolean
 references:
@@ -244,6 +246,10 @@ references:
   name: Office.AsyncResult
 - uid: office.Office.AsyncResultStatus
   name: Office.AsyncResultStatus
+- uid: office.Office.Auth
+  name: Office.Auth
+- uid: office.Office.AuthOptions
+  name: Office.AuthOptions
 - uid: office.Office.Binding
   name: Office.Binding
 - uid: office.Office.BindingDataChangedEventArgs
