--- a/docs/docs-ref-autogen/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office.addincommands.event.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0c8141e8e329358eace529ea10f42308605b0d8b
-ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
+ms.openlocfilehash: 99b68a9c8525e05e27e381e43f1b31aa961d02a3
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/06/2019
-ms.locfileid: "30413838"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900403"
 items:
 - uid: office.Office.AddinCommands.Event
   summary: 事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。 该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。
@@ -40,10 +40,10 @@ items:
     下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。
 
 
-    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 外接](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->程序的要求。
+    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
 
-    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y (邮箱 1.3: 不带选项<br>邮箱预览: 使用选项)</td><td> </td><td> </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
+    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y (自邮箱 1.3: 不`options`带参数;<br>邮箱预览: 添加对参数`options`的支持)</td><td> </td><td> </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
 
     #### <a name="examples"></a>示例
 
@@ -106,7 +106,7 @@ items:
     下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此属性。空的单元格表示相应的 Office 主机应用程序不支持此属性。
 
 
-    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 外接](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->程序的要求。
+    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
 
     *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Outlook</strong></td><td> Y (邮箱 1.3) </td><td> </td><td> </td></tr> </table>
