--- a/docs/docs-ref-autogen/toc.yml
+++ b/docs/docs-ref-autogen/toc.yml
@@ -236,7 +236,7 @@ items:
                     uid: excel.Excel.PivotFilterTopBottomCriterion
                   - name: PivotLayoutType
                     uid: excel.Excel.PivotLayoutType
-                  - name: Placement
+                  - name: 安置
                     uid: excel.Excel.Placement
                   - name: PrintComments
                     uid: excel.Excel.PrintComments
@@ -320,7 +320,7 @@ items:
                     uid: excel.Excel.WorksheetPositionType
               - name: 应用程序
                 uid: excel.Excel.Application
-              - name: AutoFilter
+              - name: 自动
                 uid: excel.Excel.AutoFilter
               - name: BasicDataValidation
                 uid: excel.Excel.BasicDataValidation
@@ -574,7 +574,7 @@ items:
                 uid: excel.Excel.PivotTableStyleCollection
               - name: PresetCriteriaConditionalFormat
                 uid: excel.Excel.PresetCriteriaConditionalFormat
-              - name: 区域
+              - name: 范围
                 uid: excel.Excel.Range
               - name: RangeAreas
                 uid: excel.Excel.RangeAreas
@@ -654,11 +654,11 @@ items:
                 uid: excel.Excel.SlicerStyle
               - name: SlicerStyleCollection
                 uid: excel.Excel.SlicerStyleCollection
-              - name: Style
+              - name: 线型
                 uid: excel.Excel.Style
               - name: StyleCollection
                 uid: excel.Excel.StyleCollection
-              - name: Subtotals
+              - name: 计时
                 uid: excel.Excel.Subtotals
               - name: 表格
                 uid: excel.Excel.Table
@@ -1096,7 +1096,7 @@ items:
                 uid: excel_release.Excel.PivotTableCollection
               - name: PresetCriteriaConditionalFormat
                 uid: excel_release.Excel.PresetCriteriaConditionalFormat
-              - name: 区域
+              - name: 范围
                 uid: excel_release.Excel.Range
               - name: RangeBorder
                 uid: excel_release.Excel.RangeBorder
@@ -1138,11 +1138,11 @@ items:
                 uid: excel_release.Excel.SettingCollection
               - name: ShowAsRule
                 uid: excel_release.Excel.ShowAsRule
-              - name: Style
+              - name: 线型
                 uid: excel_release.Excel.Style
               - name: StyleCollection
                 uid: excel_release.Excel.StyleCollection
-              - name: Subtotals
+              - name: 计时
                 uid: excel_release.Excel.Subtotals
               - name: 表格
                 uid: excel_release.Excel.Table
@@ -1294,7 +1294,7 @@ items:
                     uid: outlook.Office.MailboxEnums.ItemType
                   - name: LocationType
                     uid: outlook.Office.MailboxEnums.LocationType
-                  - name: Month
+                  - name: 月
                     uid: outlook.Office.MailboxEnums.Month
                   - name: OWAView
                     uid: outlook.Office.MailboxEnums.OWAView
@@ -1382,7 +1382,7 @@ items:
                 uid: outlook.Office.Subject
               - name: TaskSuggestion
                 uid: outlook.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: outlook.Office.Time
               - name: UserProfile
                 uid: outlook.Office.UserProfile
@@ -1401,7 +1401,7 @@ items:
                     uid: Outlook_1_7.Office.MailboxEnums.ItemNotificationMessageType
                   - name: ItemType
                     uid: Outlook_1_7.Office.MailboxEnums.ItemType
-                  - name: Month
+                  - name: 月
                     uid: Outlook_1_7.Office.MailboxEnums.Month
                   - name: OWAView
                     uid: Outlook_1_7.Office.MailboxEnums.OWAView
@@ -1477,7 +1477,7 @@ items:
                 uid: Outlook_1_7.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_7.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_7.Office.Time
               - name: UserProfile
                 uid: Outlook_1_7.Office.UserProfile
@@ -1550,7 +1550,7 @@ items:
                 uid: Outlook_1_6.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_6.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_6.Office.Time
               - name: UserProfile
                 uid: Outlook_1_6.Office.UserProfile
@@ -1623,7 +1623,7 @@ items:
                 uid: Outlook_1_5.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_5.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_5.Office.Time
               - name: UserProfile
                 uid: Outlook_1_5.Office.UserProfile
@@ -1696,7 +1696,7 @@ items:
                 uid: Outlook_1_4.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_4.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_4.Office.Time
               - name: UserProfile
                 uid: Outlook_1_4.Office.UserProfile
@@ -1769,7 +1769,7 @@ items:
                 uid: Outlook_1_3.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_3.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_3.Office.Time
               - name: UserProfile
                 uid: Outlook_1_3.Office.UserProfile
@@ -1834,7 +1834,7 @@ items:
                 uid: Outlook_1_2.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_2.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_2.Office.Time
               - name: UserProfile
                 uid: Outlook_1_2.Office.UserProfile
@@ -1899,7 +1899,7 @@ items:
                 uid: Outlook_1_1.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_1.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_1.Office.Time
               - name: UserProfile
                 uid: Outlook_1_1.Office.UserProfile
@@ -2021,7 +2021,7 @@ items:
                 uid: word.Word.RangeLocation
               - name: SelectionMode
                 uid: word.Word.SelectionMode
-              - name: Style
+              - name: 线型
                 uid: word.Word.Style
               - name: TapObjectType
                 uid: word.Word.TapObjectType
@@ -2063,7 +2063,7 @@ items:
             uid: word.Word.Paragraph
           - name: ParagraphCollection
             uid: word.Word.ParagraphCollection
-          - name: 区域
+          - name: 范围
             uid: word.Word.Range
           - name: RangeCollection
             uid: word.Word.RangeCollection
@@ -2153,6 +2153,10 @@ items:
                 uid: office.Office.AsyncContextOptions
               - name: AsyncResult
                 uid: office.Office.AsyncResult
+              - name: Auth
+                uid: office.Office.Auth
+              - name: AuthOptions
+                uid: office.Office.AuthOptions
               - name: 组合键
                 uid: office.Office.Binding
               - name: BindingDataChangedEventArgs
@@ -2183,7 +2187,7 @@ items:
                 uid: office.Office.DocumentSelectionChangedEventArgs
               - name: Error
                 uid: office.Office.Error
-              - name: File
+              - name: 文件
                 uid: office.Office.File
               - name: FileProperties
                 uid: office.Office.FileProperties
