--- a/docs/docs-ref-autogen/word/word.interfaces.fontupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.fontupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a4ef33dbe1ab9b64c60dcd81f8d35d66ec05a7d9
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: dd4df0ddd17908649199d1f123b47e1a4d5de539
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29979286"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900410"
 items:
 - uid: word.Word.Interfaces.FontUpdateData
-  summary: Font 对象，用于上的数据更新接口"font.set (<!-- -->{...}<!-- -->)".
+  summary: 用于更新 font 对象上的数据的接口, 可用于 "font. set (<!-- -->{ ... }<!-- -->)".
   name: Word.Interfaces.FontUpdateData
   fullName: Word.Interfaces.FontUpdateData
   langs:
@@ -28,10 +28,10 @@ items:
   - word.Word.Interfaces.FontUpdateData.underline
 - uid: word.Word.Interfaces.FontUpdateData.bold
   summary: >-
-    获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。
+    获取或设置表示字体是否为粗体的值。 如果字体格式为粗体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: bold
   fullName: bold
   langs:
@@ -44,10 +44,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.color
   summary: >-
-    获取或设置指定字体的颜色。 您可以提供中的值\#RRGGBB 格式或颜色名称。
+    获取或设置指定字体的颜色。 您可以提供 "\#RRGGBB" 格式的值或颜色名称。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: color
   fullName: color
   langs:
@@ -60,10 +60,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontUpdateData.doubleStrikeThrough
   summary: >-
-    获取或设置一个值，该值指示字体是否具有双删除线。 如果字体为双删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有双删除线。 如果字体格式设置为加双删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -76,10 +76,13 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.highlightColor
   summary: >-
-    获取或设置的突出显示颜色。 若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。 若要删除突出显示颜色，请将其设置为 null。 返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。
+    获取或设置突出显示颜色。 若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。 若要删除突出显示颜色, 请将其设置为 null。 返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    **注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。 这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。 当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。
+
+
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -92,10 +95,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontUpdateData.italic
   summary: >-
-    获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。
+    获取或设置表示字体是否为斜体的值。 如果字体为斜体则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: italic
   fullName: italic
   langs:
@@ -111,7 +114,7 @@ items:
     获取或设置表示字体名称的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: name
   fullName: name
   langs:
@@ -127,7 +130,7 @@ items:
     获取或设置表示字体大小（以磅值表示）的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: size
   fullName: size
   langs:
@@ -140,10 +143,10 @@ items:
       - number
 - uid: word.Word.Interfaces.FontUpdateData.strikeThrough
   summary: >-
-    获取或设置一个值，指示该字体是否删除线。 如果字体为删除线文本，否则为返回 false，则为 true。
+    获取或设置一个值, 该值指示字体是否具有删除线。 如果字体格式设置为加删除线的文本则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -156,10 +159,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.subscript
   summary: >-
-    获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。
+    获取或设置表示字体是否为下标的值。 如果字体格式为下标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: subscript
   fullName: subscript
   langs:
@@ -172,10 +175,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.superscript
   summary: >-
-    获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。
+    获取或设置表示字体是否为上标的值。 如果字体格式为上标则为 true，否则为 false。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: superscript
   fullName: superscript
   langs:
@@ -188,10 +191,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.underline
   summary: >-
-    获取或设置一个值，指示字体的下划线类型。 None 如果的字体不加下划线。
+    获取或设置表示字体的下划线类型的值。 如果字体不带下划线, 则为 "无"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   name: underline
   fullName: underline
   langs:
